<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/TextContent.Black"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_8"
            android:text="@string/hewan"
            android:textSize="@dimen/padding_text_32" />

        <TextView
            android:id="@+id/tv_detail_latin"
            style="@style/TextContent.LatinName"
            android:layout_marginBottom="@dimen/padding_16"
            android:text="@string/latin"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_detail_info"
            style="@style/TextContent"
            android:layout_marginBottom="@dimen/padding_16"
            android:lineSpacingMultiplier="1"
            android:text="@string/info"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            style="@style/TextContent.LatinName"
            android:layout_marginBottom="@dimen/padding_8"
            android:text="@string/keterangan" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_16"
            android:layout_marginRight="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_16">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_8">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/habitat" />

                <TextView
                    android:id="@+id/tv_detail_habitat"
                    style="@style/TextSpec.Value"
                    android:text="@string/habitat" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_8">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/klasifikasi" />

                <TextView
                    android:id="@+id/tv_detail_klasifikasi"
                    style="@style/TextSpec.Value"
                    android:text="@string/klasifikasi" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_fav"
            style="@style/ButtonGeneral"
            android:text="@string/fav" />
    </LinearLayout>

</ScrollView>