<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/padding_8"
    android:layout_marginTop="@dimen/padding_4"
    android:layout_marginRight="@dimen/padding_8"
    android:layout_marginBottom="@dimen/padding_4"
    app:cardCornerRadius="@dimen/padding_4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="@dimen/padding_8">

        <ImageView
            android:id="@+id/img_fav_item"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="@dimen/padding_4"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_fav_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginRight="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_8"
            android:layout_toEndOf="@id/img_fav_item"
            android:layout_toRightOf="@id/img_fav_item"
            android:text="@string/hewan"
            android:textSize="@dimen/padding_text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fav_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tv_fav_name"
            android:layout_below="@id/img_fav_item"
            android:layout_marginLeft="@dimen/padding_16"
            android:layout_marginRight="@dimen/padding_16"
            android:layout_toEndOf="@id/img_fav_item"
            android:layout_toRightOf="@id/img_fav_item"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginLeft="@dimen/padding_16"
            android:layout_toEndOf="@id/img_fav_item"
            android:layout_toRightOf="@id/img_fav_item"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/hapus"
                android:textColor="@android:color/white"
                android:textSize="@dimen/padding_text_12" />
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>